--- a/_config.yml
+++ b/_config.yml
@@ -16,13 +16,13 @@
 title: Case Linguist LLC
 email: rene@caselinguist.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Spoken Language Interpreter based in Chicago, specializing in courtroom settings.
+  Listed as “registered”  in the Administrative Office of Illinois Courts' Court Interpreter Registry,
+  Rene continues to improve through constant practice and refinement of broad legal terminology.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: caselinguist
-# github_username:  jekyll
+github_username:  caselinguist
 
 # Build settings
 markdown: kramdown
