--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,8 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Case Linguist LLC
+title: Case Linguist
+business_title: Case Linguist LLC
 email: rene@caselinguist.com
 description: > # this means to ignore newlines until "baseurl:"
   Spoken Language Interpreter based in Chicago, specializing in courtroom settings.
@@ -23,6 +24,7 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: caselinguist
 github_username:  caselinguist
+
 
 # Build settings
 markdown: kramdown
