--- a/_config.yml
+++ b/_config.yml
@@ -15,14 +15,14 @@
 # in the templates via {{ site.myvariable }}.
 title: Case Linguist
 business_title: Case Linguist LLC
-email: rene@caselinguist.com
+email: info@caselinguist.com
 description: > # this means to ignore newlines until "baseurl:"
   Spoken Language Interpreter based in Chicago, specializing in courtroom settings.
   Listed as “registered”  in the Administrative Office of Illinois Courts' Court Interpreter Registry,
   Rene continues to improve through constant practice and refinement of broad legal terminology.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: caselinguist
+twitter_username: @caselinguist
 github_username:  caselinguist
 
 
