--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ description: > # this means to ignore newlines until "baseurl:"
   Rene continues to improve through constant practice and refinement of broad legal terminology.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: @caselinguist
+twitter_username: "@caselinguist"
 github_username:  caselinguist
 
 
