--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@
 # in the templates via {{ site.myvariable }}.
 title: Marketing for Lawyers
 business_title: Case Linguist LLC
-marketing_title: SEO for Small Firms
+marketing_title: Marketing for Lawyers
 email: rene@caselinguist.com
 description: > # this means to ignore newlines until "baseurl:"
   Contact an SEO based in Chicago specializing in legal marketing. As a background note, René can be found in Illinois Courts' Court Interpreter Registry. Case Linguist LLC offers services that require broad legal terminology as well as a register suitable for marketing purposes.
