updating contact.html

--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@
 title: Marketing for Lawyers
 business_title: Case Linguist LLC
 marketing_title: Marketing for Lawyers
-email: rene@caselinguist.com
+email: rene@marketingforlawyers.org
 description: > # this means to ignore newlines until "baseurl:"
   Contact a Chicago-based SEO company specializing in legal marketing for English and Spanish speaking audiences.
 baseurl: "" # the subpath of your site, e.g. /blog
