--- a/_config.yml
+++ b/_config.yml
@@ -25,10 +25,6 @@ twitter_username: caselinguist
 github_username:  caselinguist
 google_analytics: UA-93007789-1
 
-main_service_message: >
-  Case Linguist LLC provides internet marketing services for English and Spanish-speaking audiences. We offer comprehensive packages and a la carte services that can be catered to your needs."
-
-
 # Build settings
 markdown: kramdown
 theme: minima
@@ -54,3 +50,7 @@ collections:
     pricing_level: "comprehensive"
 
 primary_tag_desc: "Hispanic Legal Marketing" # not "home"
+
+main_service_message: >
+  Case Linguist LLC provides internet marketing services for English and Spanish-speaking audiences. We offer comprehensive packages and a la carte services that can be catered to your needs.
+
