--- a/_config.yml
+++ b/_config.yml
@@ -27,6 +27,7 @@ url: "https://marketingforlawyers.org" # the base hostname & protocol for your s
 twitter_username: caselinguist
 github_username:  caselinguist
 google_analytics: UA-93007789-1
+chatra: RftcZGhX9LZETxsKY
 
 # Build settings
 markdown: kramdown
